versioned_docs/version-2.24/reference/targets/jvm_war.mdx
---
title: jvm_war
description: |
  A JSR 154 &#x22;web application archive&#x22; (or &#x22;war&#x22;) with first-party and third-party code bundled for deploys in Java Servlet containers.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A JSR 154 &#x22;web application archive&#x22; (or &#x22;war&#x22;) with first-party and third-party code bundled for deploys in Java Servlet containers.

Backend: <span className="color--primary">`pants.backend.experimental.scala`</span>

---

<span className={styles.options}>

## `descriptor`

<Field
    type_repr={`str`}
>

Path to a file containing the descriptor (i.e., `web.xml`) for this WAR file. Defaults to `web.xml`.

</Field>

## `content`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

A list of addresses to `resources` and `files` targets with content to place in the document root of this WAR file.

</Field>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `pants dependencies` or `pants peek` on this target to get the final result.

See https://www.pantsbuild.org/2.24/docs/using-pants/key-concepts/targets-and-build-files for more about how addresses are formed, including for generated targets. You can also run `pants list ::` to find all addresses in your project, or `pants list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`'\${spec_path_normalized}/\${target_name_normalized}\${file_suffix}'`}
>

Where the built asset should be located.

This field supports the following template replacements:

- `${spec_path_normalized}`: The path to the target&#x27;s directory (&#x22;spec path&#x22;) with forward slashes replaced by dots.

- `${target_name_normalized}`: The target&#x27;s name with paramaterizations escaped by replacing dots with underscores.

- `${file_suffix}`: For target&#x27;s which produce single file artifacts, this is the file type suffix to use with a leading dot,
  and is empty otherwise when not applicable.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext`. This behavior corresponds to the default template: `${spec_path_normalized}/${target_name_normalized}${file_suffix}`

When running `pants package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

## `resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

## `shading_rules`

<Field
    type_repr={`Iterable[pants.jvm.target_types.JvmShadingRule] | None`}
    default_repr={`None`}
>

Shading rules to be applied to the individual JAR artifacts embedded in the `WEB-INF/lib` folder.

There are 4 possible shading rules available, which are as follows:

- `shading_relocate`: Relocates the classes under the given `package` into the new package name. The default target package is `__shaded_by_pants__` if none provided in the `into` parameter.
- `shading_rename`: Renames all occurrences of the given `pattern` by the `replacement`.
- `shading_zap`: Removes from the final artifact the occurrences of the `pattern`.
- `shading_keep`: Keeps in the final artifact the occurrences of the `pattern` (and removes anything else).

When defining shading rules, just add them in this field using the previously listed rule alias and passing along the required parameters.

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

</span>
